--- a/css/myStylesheet.css
+++ b/css/myStylesheet.css
@@ -3,3 +3,7 @@ body{
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
+.modal-content{
+    color: white;
+    background-color: black;
+}
